LongestConsecutiveNumbers and GeometricSequenceTriplets in Python, Java